--- a/src/AnnonceBundle/Resources/views/Default/MesAnnonces.html.twig
+++ b/src/AnnonceBundle/Resources/views/Default/MesAnnonces.html.twig
@@ -121,6 +121,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
     <div class="container"><br>
 <center><h2>Liste de Mes Annonces</h2> <br><br>
     <a href="{{ path('traiterDemande') }}" style="color: red">Traiter les Nouvelles Demandes</a><br><br>
+    <a href="{{ path('pdf') }}" style="color: cornflowerblue">Imprimer Mes Annonces</a><br><br>
        </center>
         <div class="input-group input-group-default" >
             <form class="navbar-form navbar-right" action="{{ path('rechercherAnnonce') }}" method="post">
